--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/moonman369/Crowd-Funding-Contract/issues"
   },
-  "homepage": "https://github.com/moonman369/Crowd-Funding-Contract#readme"
+  "homepage": "https://github.com/moonman369/Crowd-Funding-Contract#readme",
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@openzeppelin/contracts": "^4.8.1",
+    "hardhat": "^2.12.6"
+  }
 }
