--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npx hardhat test",
-    "deploy-local": "npx hardhat run deploy/deploy.js --network localhost",
+    "deploy-local": "npx hardhat run scripts/deploy.js --network localhost",
     "upgrade-local": "npx hardhat run scripts/upgrade.js --network localhost"
   },
   "repository": {
