--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "node": "npx hardhat node",
     "test": "npx hardhat test",
     "deploy-local": "npx hardhat run scripts/deploy.js --network localhost",
+    "deploy-proxy-local": "npx hardhat run scripts/deploy-proxy.js --network localhost",
     "upgrade-local": "npx hardhat run scripts/upgrade.js --network localhost"
   },
   "repository": {
@@ -26,5 +28,8 @@
     "chai-as-promised": "^7.1.1",
     "ethers": "^5.0.0",
     "hardhat": "^2.12.6"
+  },
+  "dependencies": {
+    "hardhat-upgrades": "^0.0.0"
   }
 }
