--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "npx hardhat test",
     "deploy-local": "npx hardhat run scripts/deploy.js --network localhost",
     "deploy-proxy-local": "npx hardhat run scripts/deploy-proxy.js --network localhost",
-    "upgrade-local": "npx hardhat run scripts/upgrade.js --network localhost"
+    "upgrade-proxy-local": "npx hardhat run scripts/upgrade-proxy.js --network localhost"
   },
   "repository": {
     "type": "git",
