--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hardhat": "^2.12.6"
   },
   "dependencies": {
-    "hardhat-upgrades": "^0.0.0"
+    "hardhat-upgrades": "^0.0.0",
+    "prompt": "^1.3.0"
   }
 }
