--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 node_modules
 .env
+/.openzeppelin
 coverage
 coverage.json
 typechain
@@ -8,4 +9,3 @@ typechain-types
 # Hardhat files
 cache
 artifacts
-
